--- a/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup = (\"I\",)"
    ]
   },
   {
@@ -33,11 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print(type(tup))\n"
    ]
   },
   {
@@ -61,7 +69,9 @@
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "\n",
+    "# Your explanation here\n",
+    "# You can't add elements to a tuple because they are immutable."
    ]
   },
   {
@@ -79,13 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
+    "tup = (\"I\",\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
     "\n",
-    "# Your explanation here\n"
+    "# Your explanation here\n",
+    "\n",
+    "Yes, since we are Re-assigning the values. Meaning we are not appending but overwriting."
    ]
   },
   {
@@ -103,11 +116,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "tup1 = (tup[0],tup[1],tup[2],tup[3])\n",
+    "tup2 = (tup[-4],tup[-3],tup[-2],tup[-1])\n",
+    "print(tup1)\n",
+    "print(tup2)\n"
    ]
   },
   {
@@ -121,11 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n",
+      "tup3 is equal to tup\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "tup3 = tup1 + tup2\n",
+    "print(tup3)\n",
+    "if tup == tup3:\n",
+    "    print(\"tup3 is equal to tup\")\n",
+    "else:\n",
+    "    print(\"tup3 is not equal to tup\")"
    ]
   },
   {
@@ -137,11 +180,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "The sum of the lenght of tup1 and tup2 is equal to the length of tup3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "len_tup12 = len(tup1) + len(tup2)\n",
+    "print(len_tup12)\n",
+    "\n",
+    "if len(tup3) == len_tup12:\n",
+    "    print(\"The sum of the lenght of tup1 and tup2 is equal to the length of tup3\")\n",
+    "else:\n",
+    "    print(\"The sum of the lenght of tup1 and tup2 is NOT equal to the length of tup3\")"
    ]
   },
   {
@@ -153,11 +213,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(tup3.index(\"h\"))"
    ]
   },
   {
@@ -177,11 +247,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is True\n",
+      "b is False\n",
+      "c is True\n",
+      "d is False\n",
+      "e is False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print(i + \" is True\")\n",
+    "    else:\n",
+    "        print(i + \" is False\")"
    ]
   },
   {
@@ -195,12 +283,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a occurs 1 time(s).\n",
+      "b occurs 0 time(s).\n",
+      "c occurs 1 time(s).\n",
+      "d occurs 0 time(s).\n",
+      "e occurs 0 time(s).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "for i in letters:\n",
+    "    print(i + \" occurs \" + str(tup3.count(i)) + \" time(s).\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
