--- a/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25, 72, 84, 3, 16, 43, 70, 27, 87, 97, 15, 64, 40, 8, 80, 35, 31, 47, 53, 44, 88, 91, 56, 37, 33, 74, 10, 42, 75, 82, 86, 57, 60, 28, 69, 96, 29, 68, 21, 54, 63, 0, 13, 26, 48, 71, 85, 99, 51, 83, 61, 58, 36, 93, 49, 5, 17, 73, 4, 89, 24, 39, 65, 52, 1, 78, 38, 94, 41, 45, 14, 55, 7, 66, 46, 92, 18, 20, 77, 90]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "sample_list_1 = random.sample(range(100),80)\n",
+    "\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +66,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 4, 5, 7, 8, 10, 13, 14, 15, 16, 17, 18, 20, 21, 24, 25, 26, 27, 28, 29, 31, 33, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 51, 52, 53, 54, 55, 56, 57, 58, 60, 61, 63, 64, 65, 66, 68, 69, 70, 71, 72, 73, 74, 75, 77, 78, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 96, 97, 99}\n",
+      "80\n",
+      "Length is the same\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set1 = set(sample_list_1)\n",
+    "print(set1)\n",
+    "print(len(set1))\n",
+    "\n",
+    "if len(set1) == len(sample_list_1):\n",
+    "    print(\"Length is the same\")\n",
+    "    \n",
+    "else: \n",
+    "    print(\"Length is not the same\")"
    ]
   },
   {
@@ -77,11 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 11, 53, 41, 10, 5, 52, 57, 37, 24, 99, 78, 12, 85, 23, 80, 18, 37, 40, 24, 93, 0, 41, 21, 73, 63, 2, 22, 7, 94, 30, 35, 48, 53, 64, 18, 29, 48, 29, 49, 25, 5, 80, 17, 40, 83, 99, 12, 88, 75, 45, 21, 68, 5, 26, 64, 56, 34, 40, 64, 91, 93, 33, 49, 28, 43, 20, 15, 51, 29, 43, 43, 65, 17, 29, 26, 62, 39, 29, 95]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in range(80):    \n",
+    "    sample_list_2.append(random.randint(0,100))\n",
+    "    \n",
+    "print(sample_list_2)"
    ]
   },
   {
@@ -93,11 +139,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n",
+      "Length is not the same\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set2 = set(sample_list_2)\n",
+    "\n",
+    "print(len(set2))\n",
+    "\n",
+    "if len(set2) == len(sample_list_2):\n",
+    "    print(\"Length is the same\")\n",
+    "    \n",
+    "else: \n",
+    "    print(\"Length is not the same\")"
    ]
   },
   {
@@ -109,11 +174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 4, 8, 13, 14, 16, 27, 31, 36, 38, 42, 44, 46, 47, 54, 55, 58, 60, 61, 66, 69, 70, 71, 72, 74, 77, 82, 84, 86, 87, 89, 90, 92, 96, 97}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 34, 11, 12, 22, 23, 62, 30, 95}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set4 = set2.difference(set1)\n",
+    "print (set4)"
    ]
   },
   {
@@ -141,11 +228,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 5, 7, 10, 15, 17, 18, 20, 21, 24, 25, 26, 28, 29, 33, 35, 37, 39, 40, 41, 43, 45, 48, 49, 51, 52, 53, 56, 57, 63, 64, 65, 68, 73, 75, 78, 80, 83, 85, 88, 91, 93, 94, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +262,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(len(set5) == len(set1) - len(set3) == len(set2) - len(set4))"
    ]
   },
   {
@@ -181,11 +288,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()\n",
+    "print(type(set6))"
    ]
   },
   {
@@ -197,11 +314,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 3, 4, 5, 7, 8, 10, 13, 14, 15, 16, 17, 18, 20, 21, 24, 25, 26, 27, 28, 29, 31, 33, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 51, 52, 53, 54, 55, 56, 57, 58, 60, 61, 63, 64, 65, 66, 68, 69, 70, 71, 72, 73, 74, 75, 77, 78, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 96, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3)\n",
+    "set6.update(set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(set1 == set6)"
    ]
   },
   {
@@ -229,11 +367,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(set2.issubset(set1))"
    ]
   },
   {
@@ -247,11 +394,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "aggregate345 = set3.union(set4).union(set5)\n",
+    "aggregate12 = set1.union(set2)\n",
+    "\n",
+    "print(aggregate345 == aggregate12)"
    ]
   },
   {
@@ -263,11 +423,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 4, 5, 7, 8, 10, 13, 14, 15, 16, 17, 18, 20, 21, 24, 25, 26, 27, 28, 29, 31, 33, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 51, 52, 53, 54, 55, 56, 57, 58, 60, 61, 63, 64, 65, 66, 68, 69, 70, 71, 72, 73, 74, 75, 77, 78, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 96, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1.pop()\n",
+    "print(set1)"
    ]
   },
   {
@@ -283,12 +453,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 5, 7, 8, 10, 13, 14, 15, 16, 17, 18, 20, 24, 25, 26, 27, 28, 33, 35, 36, 37, 38, 40, 42, 43, 44, 45, 46, 47, 48, 52, 53, 54, 55, 56, 57, 58, 60, 63, 64, 65, 66, 68, 70, 72, 73, 74, 75, 77, 78, 80, 82, 83, 84, 85, 86, 87, 88, 90, 92, 93, 94, 96, 97}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "set1.difference_update(set(list_to_remove)) \n",
+    "\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
