solved python lab 03

--- a/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-3.ipynb
+++ b/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -214,17 +214,17 @@
      "output_type": "stream",
      "text": [
       "         word  freq\n",
-      "120         a     8\n",
-      "109     about     1\n",
-      "43        all     1\n",
-      "96   although     3\n",
-      "72        and    23\n",
+      "0           a     8\n",
+      "1       about     1\n",
+      "2         all     1\n",
+      "3    although     3\n",
+      "4         and    23\n",
       "..        ...   ...\n",
-      "128      were     3\n",
-      "41      where     1\n",
-      "54       with    22\n",
-      "15        you    16\n",
-      "97       your    21\n",
+      "135      were     3\n",
+      "136     where     1\n",
+      "137      with    22\n",
+      "138       you    16\n",
+      "139      your    21\n",
       "\n",
       "[140 rows x 2 columns]\n"
      ]
@@ -232,7 +232,7 @@
    ],
    "source": [
     "# Your code here\n",
-    "print(df.sort_values(by=['word']))\n"
+    "print(df.sort_values(by=['word']).reset_index(drop= True))\n"
    ]
   },
   {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -252,17 +252,17 @@
      "output_type": "stream",
      "text": [
       "         word  freq\n",
-      "97       your    21\n",
-      "15        you    16\n",
-      "54       with    22\n",
-      "41      where     1\n",
-      "128      were     3\n",
+      "0        your    21\n",
+      "1         you    16\n",
+      "2        with    22\n",
+      "3       where     1\n",
+      "4        were     3\n",
       "..        ...   ...\n",
-      "72        and    23\n",
-      "96   although     3\n",
-      "43        all     1\n",
-      "109     about     1\n",
-      "120         a     8\n",
+      "135       and    23\n",
+      "136  although     3\n",
+      "137       all     1\n",
+      "138     about     1\n",
+      "139         a     8\n",
       "\n",
       "[140 rows x 2 columns]\n"
      ]
@@ -270,8 +270,15 @@
    ],
    "source": [
     "# Your code here\n",
-    "print(df.sort_values(by=['word'], ascending=False))"
+    "print(df.sort_values(by=['word'], ascending=False).reset_index(drop= True))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
