--- a/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-1.ipynb
+++ b/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durante un tiempo no estuvo segura de si su marido era su marido.\n"
+     ]
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(' '.join(str_list) + \".\")"
    ]
   },
   {
@@ -50,12 +59,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
+     ]
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "new_food=[]\n",
+    "\n",
+    "for i in food_list:\n",
+    "    i = i.lower()\n",
+    "    if i.startswith('b'):\n",
+    "        new_food.append(i)\n",
+    "\n",
+    "print('Grocery list: ' + ', '.join(new_food) + \".\")"
    ]
   },
   {
@@ -69,9 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle with radius: 4.5 is: 63.61725123519331\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -88,9 +122,11 @@
     "    # Sample Output: 78.53981633\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
-    "    \n",
-    "# Your output string here:"
+    "    return pi * x ** 2\n",
+    "\n",
+    "\n",
+    "# Your output string here:\n",
+    "print(f'{string1} {radius} {string2} {area(radius)}')"
    ]
   },
   {
@@ -106,9 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire': 2, 'ice': 2, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +164,12 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from collections import Counter\n",
+    "\n",
+    "poem_dict = dict(Counter(poem.replace(',', '').replace('.', '').replace('\\n',' ').split()))\n",
+    "\n",
+    "print(poem_dict)\n"
    ]
   },
   {
@@ -132,9 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', 'morning', 'with', 'my', 'tears', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n",
+      "{'was', 'mine', 'bright', 'pole', 'he', 'shine', 'end', 'into', 'apple', 'see', 'morning', 'grew', 'fears', 'that', 'veild', 'with', 'stole', 'garden', 'soft', 'glad', 'tree', 'did', 'my', 'wrath', 'i', 'tears', 'wiles', 'smiles', 'foe', 'both', 'beneath', 'friend', 'till', 'not', 'night', 'beheld', 'knew', 'had', 'angry', 'bore', 'grow', 'waterd', 'outstretched', 'told', 'sunned', 'when', 'day', 'deceitful'}\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -158,7 +216,20 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "poem_list = re.sub(\"[^a-zA-Z]+\", \" \", poem).lower().split() # first replace all non alphabet chars : re.sub(MATCH PATTERN, REPLACE STRING, STRING TO SEARCH) -> then everything lowercase -> then split space\n",
+    "\n",
+    "#With list comprehensions\n",
+    "clean_list = [i for i in poem_list if i not in blacklist]\n",
+    "print(clean_list)\n",
+    "\n",
+    "#or with sets\n",
+    "\n",
+    "setb = set(blacklist)\n",
+    "setp = set(poem_list)\n",
+    "setnotblacklist = setp.difference(setb) \n",
+    "print(setnotblacklist)"
    ]
   },
   {
@@ -172,14 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'P']\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(re.findall('[A-Z]', poem))"
    ]
   },
   {
@@ -191,13 +271,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123abc', 'abc123', 'JohnSmith1', 'ABBY4']\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "data_list = [i for i in data if re.search('[0-9]',i)]\n",
+    "print(data_list)"
    ]
   },
   {
@@ -213,13 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "# Your code here:\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
