adding solutions for 03_Lab-String-operations

--- a/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-1.ipynb
+++ b/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-1.ipynb
@@ -59,14 +59,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
+     "ename": "SyntaxError",
+     "evalue": "f-string: expecting '}' (<ipython-input-118-6384cb4522ec>, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-118-6384cb4522ec>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    print(f\"Grocery list: {\", \".join(new_food)}.\")\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m f-string: expecting '}'\n"
      ]
     }
    ],
@@ -81,7 +82,9 @@
     "    if i.startswith('b'):\n",
     "        new_food.append(i)\n",
     "\n",
-    "print('Grocery list: ' + ', '.join(new_food) + \".\")"
+    "print(new_food)\n",
+    "print('Grocery list: ' + ', '.join(new_food) + \".\")\n",
+    "print(f\"Grocery list: {', '.join(new_food)}.\")"
    ]
   },
   {
@@ -304,12 +307,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
+    "# Your code here:"
    ]
   },
   {
