updating lab 03 solutions

--- a/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-1.ipynb
+++ b/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-1.ipynb
@@ -59,15 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "f-string: expecting '}' (<ipython-input-118-6384cb4522ec>, line 13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-118-6384cb4522ec>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    print(f\"Grocery list: {\", \".join(new_food)}.\")\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m f-string: expecting '}'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bananas', 'bread', 'brownie mix', 'broccoli']\n",
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n",
+      "Grocery list: bananas, bread, brownie mix, broccoli.\n"
      ]
     }
    ],
@@ -82,7 +83,6 @@
     "    if i.startswith('b'):\n",
     "        new_food.append(i)\n",
     "\n",
-    "print(new_food)\n",
     "print('Grocery list: ' + ', '.join(new_food) + \".\")\n",
     "print(f\"Grocery list: {', '.join(new_food)}.\")"
    ]
@@ -146,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -307,20 +309,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "['123abc', 'abc123', 'JohnSmith1']\n"
      ]
     }
    ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:"
+    "# Your code here:\n",
+    "\n",
+    "new_data_list = [i for i in data if re.search('[0-9]',i) and re.search('[a-z]',i)]\n",
+    "print(new_data_list)"
    ]
   },
   {
