Some minor corrections in python Lab03 and my solutions to python Lab 04

--- a/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-1.ipynb
+++ b/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-1.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
     "\n",
     "setb = set(blacklist)\n",
     "setp = set(poem_list)\n",
-    "setnotblacklist = setp.difference(setb) \n",
+    "setnotblacklist = set(poem_list).difference(set(blacklist)) \n",
     "print(setnotblacklist)"
    ]
   },
@@ -324,7 +324,7 @@
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "# Your code here:\n",
     "\n",
-    "new_data_list = [i for i in data if re.search('[0-9]',i) and re.search('[a-z]',i)]\n",
+    "new_data_list = [i for i in data if re.search('[0-9]',i) and re.search('[az]',i)]\n",
     "print(new_data_list)"
    ]
   },
