--- a/Labs/module-1_labs/01_python/04_lab-functional-programming/your-code/Q1.ipynb
+++ b/Labs/module-1_labs/01_python/04_lab-functional-programming/your-code/Q1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,13 @@
     "    Loop `docs` and read the content of each doc into a string in `corpus`.\n",
     "    Remember to convert the doc content to lowercases and remove punctuation.\n",
     "    \"\"\"\n",
-    "\n",
+    "    corpus = []\n",
     "    \n",
+    "    for i in docs:\n",
+    "        with open(i) as d: #With is needed to manage memory!!!!!\n",
+    "            corpus.append(d.read())\n",
+    "    \n",
+    "    corpus = [i.replace('.', '').lower() for i in corpus]\n",
     "    \n",
     "    \"\"\"\n",
     "    Loop `corpus`. Append the terms in each doc into the `bag_of_words` array. The terms in `bag_of_words` \n",
@@ -46,14 +51,32 @@
     "    if it is not a stop word.\n",
     "    \"\"\"\n",
     "\n",
-    "    \n",
-    "    \n",
+    "    word_list = []\n",
+    "    bag_of_words = []\n",
+    "\n",
+    "    for i in corpus:\n",
+    "        word_list = i.split()\n",
+    "        for word in word_list:\n",
+    "            if word not in bag_of_words and word not in stop_words:\n",
+    "                bag_of_words.append(word)\n",
+    "\n",
     "    \n",
     "    \"\"\"\n",
     "    Loop `corpus` again. For each doc string, count the number of occurrences of each term in `bag_of_words`. \n",
     "    Create an array for each doc's term frequency and append it to `term_freq`.\n",
     "    \"\"\"\n",
-    "\n",
+    "    term_freq = []\n",
+    "    \n",
+    "    for i in corpus:\n",
+    "        i = i.split()\n",
+    "        term_freq_doc = []\n",
+    "        for word in bag_of_words:\n",
+    "            if word in i:\n",
+    "                term_freq_doc.append('1')\n",
+    "            else:\n",
+    "                term_freq_doc.append('0')\n",
+    "        term_freq.append(term_freq_doc)\n",
+    "    \n",
     "    \n",
     "    \n",
     "    # Now return your output as an object\n",
@@ -75,12 +98,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bag_of_words': ['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at'], 'term_freq': [['1', '1', '1', '0', '0', '0', '0', '0', '0'], ['1', '0', '0', '1', '1', '0', '0', '0', '0'], ['1', '0', '0', '1', '0', '1', '1', '1', '1']]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Define doc paths array\n",
-    "docs = []\n",
+    "docs = ['../../03_lab-string-operations/your-code/doc1.txt', \n",
+    "        '../../03_lab-string-operations/your-code/doc2.txt',\n",
+    "        '../../03_lab-string-operations/your-code/doc3.txt']\n",
     "\n",
     "# Obtain BoW from your function\n",
     "bow = get_bow_from_docs(docs)\n",
@@ -100,9 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frozenset({'get', 'to', 'is', 'yourself', 're', 'about', 'nor', 'i', 'without', 'no', 'whereupon', 'mostly', 'has', 'hereafter', 'ever', 'thereby', 'couldnt', 'whatever', 'over', 'of', 'being', 'own', 'by', 'again', 'some', 'amoungst', 'such', 'few', 'somehow', 'itself', 'see', 'as', 'hasnt', 'my', 'ie', 'be', 'becomes', 'whoever', 'amount', 'un', 'seem', 'were', 'whither', 'everyone', 'towards', 'must', 'therein', 'who', 'thereupon', 'so', 'in', 'third', 'take', 'somewhere', 'twenty', 'became', 'its', 'herself', 'would', 'nine', 'thick', 'thence', 'now', 'anyone', 'ourselves', 'whom', 'there', 'cannot', 'full', 'onto', 'hence', 'until', 'me', 'these', 'everything', 'anyway', 'becoming', 'find', 'here', 'describe', 'your', 'via', 'seemed', 'us', 'below', 'side', 'inc', 'everywhere', 'rather', 'two', 'neither', 'during', 'yet', 'off', 'been', 'often', 'hundred', 'de', 'seems', 'after', 'whence', 'noone', 'someone', 'hereby', 'which', 'become', 'myself', 'moreover', 'meanwhile', 'with', 'when', 'her', 'very', 'forty', 'thereafter', 'cant', 'am', 'will', 'name', 'might', 'together', 'one', 'across', 'besides', 'seeming', 'a', 'enough', 'made', 'give', 'twelve', 'thus', 'them', 'whereafter', 'those', 'all', 'though', 'eg', 'afterwards', 'show', 'for', 'why', 'behind', 'they', 'front', 'or', 'otherwise', 'less', 'hereupon', 'always', 'least', 'ten', 'first', 'anyhow', 'other', 'same', 'yours', 'sincere', 'never', 'detail', 'throughout', 'was', 'fifteen', 'although', 'and', 'around', 'if', 'from', 'more', 'you', 'fifty', 'whole', 'ours', 'empty', 'wherever', 'him', 'most', 'therefore', 'anywhere', 'upon', 'but', 'any', 'amongst', 'others', 'while', 'five', 'his', 'back', 'former', 'latter', 'once', 'nobody', 'per', 'whereby', 'further', 'sometime', 'except', 'may', 'due', 'along', 'than', 'none', 'system', 'that', 'bill', 'since', 'many', 'fill', 'then', 'go', 'beside', 'under', 'done', 'con', 'eight', 'found', 'above', 'cry', 'keep', 'interest', 'ltd', 'should', 'several', 'between', 'four', 'are', 'this', 'almost', 'have', 'only', 'already', 'it', 'put', 'through', 'too', 'toward', 'top', 'serious', 'nowhere', 'down', 'next', 'formerly', 'call', 'three', 'the', 'herein', 'mill', 'we', 'can', 'had', 'perhaps', 'elsewhere', 'whose', 'alone', 'because', 'what', 'move', 'nothing', 'eleven', 'also', 'part', 'even', 'sometimes', 'whereas', 'not', 'before', 'indeed', 'among', 'wherein', 'whether', 'thru', 'thin', 'every', 'hers', 'please', 'their', 'etc', 'something', 'sixty', 'anything', 'he', 'much', 'on', 'at', 'beyond', 'out', 'namely', 'where', 'themselves', 'up', 'could', 'she', 'how', 'six', 'last', 'whenever', 'both', 'against', 'however', 'still', 'else', 'an', 'our', 'bottom', 'either', 'within', 'well', 'another', 'fire', 'do', 'each', 'mine', 'yourselves', 'into', 'beforehand', 'co', 'latterly', 'nevertheless', 'himself'})\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction import stop_words\n",
     "print(stop_words.ENGLISH_STOP_WORDS)"
@@ -128,9 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bag_of_words': ['ironhack', 'cool', 'love', 'student'], 'term_freq': [['1', '1', '0', '0'], ['1', '0', '1', '0'], ['1', '0', '0', '1']]}\n"
+     ]
+    }
+   ],
    "source": [
     "bow = get_bow_from_docs(docs, stop_words.ENGLISH_STOP_WORDS)\n",
     "\n",
@@ -170,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
