--- a/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-2.ipynb
+++ b/Labs/module-1_labs/01_python/03_lab-string-operations/your-code/challenge-2.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,8 @@
     "# Write your code here\n",
     "\n",
     "for i in docs:\n",
-    "    corpus.append(open(i, \"r\").read())"
+    "    with open(i) as d: #With is needed to manage memory!!!!!\n",
+    "        corpus.append(d.read())"
    ]
   },
   {
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -323,13 +324,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-53-5dd48bfe016f>, line 26)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-53-5dd48bfe016f>\"\u001b[0;36m, line \u001b[0;32m26\u001b[0m\n\u001b[0;31m    if word not in bag_of_words and not in stop_words:\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "stop_words = ['all', 'six', 'less', 'being', 'indeed', 'over', 'move', 'anyway', 'fifty', 'four', 'not', 'own', 'through', 'yourselves', 'go', 'where', 'mill', 'only', 'find', 'before', 'one', 'whose', 'system', 'how', 'somewhere', 'with', 'thick', 'show', 'had', 'enough', 'should', 'to', 'must', 'whom', 'seeming', 'under', 'ours', 'has', 'might', 'thereafter', 'latterly', 'do', 'them', 'his', 'around', 'than', 'get', 'very', 'de', 'none', 'cannot', 'every', 'whether', 'they', 'front', 'during', 'thus', 'now', 'him', 'nor', 'name', 'several', 'hereafter', 'always', 'who', 'cry', 'whither', 'this', 'someone', 'either', 'each', 'become', 'thereupon', 'sometime', 'side', 'two', 'therein', 'twelve', 'because', 'often', 'ten', 'our', 'eg', 'some', 'back', 'up', 'namely', 'towards', 'are', 'further', 'beyond', 'ourselves', 'yet', 'out', 'even', 'will', 'what', 'still', 'for', 'bottom', 'mine', 'since', 'please', 'forty', 'per', 'its', 'everything', 'behind', 'un', 'above', 'between', 'it', 'neither', 'seemed', 'ever', 'across', 'she', 'somehow', 'be', 'we', 'full', 'never', 'sixty', 'however', 'here', 'otherwise', 'were', 'whereupon', 'nowhere', 'although', 'found', 'alone', 're', 'along', 'fifteen', 'by', 'both', 'about', 'last', 'would', 'anything', 'via', 'many', 'could', 'thence', 'put', 'against', 'keep', 'etc', 'amount', 'became', 'ltd', 'hence', 'onto', 'or', 'con', 'among', 'already', 'co', 'afterwards', 'formerly', 'within', 'seems', 'into', 'others', 'while', 'whatever', 'except', 'down', 'hers', 'everyone', 'done', 'least', 'another', 'whoever', 'moreover', 'couldnt', 'throughout', 'anyhow', 'yourself', 'three', 'from', 'her', 'few', 'together', 'top', 'there', 'due', 'been', 'next', 'anyone', 'eleven', 'much', 'call', 'therefore', 'interest', 'then', 'thru', 'themselves', 'hundred', 'was', 'sincere', 'empty', 'more', 'himself', 'elsewhere', 'mostly', 'on', 'fire', 'am', 'becoming', 'hereby', 'amongst', 'else', 'part', 'everywhere', 'too', 'herself', 'former', 'those', 'he', 'me', 'myself', 'made', 'twenty', 'these', 'bill', 'cant', 'us', 'until', 'besides', 'nevertheless', 'below', 'anywhere', 'nine', 'can', 'of', 'your', 'toward', 'my', 'something', 'and', 'whereafter', 'whenever', 'give', 'almost', 'wherever', 'is', 'describe', 'beforehand', 'herein', 'an', 'as', 'itself', 'at', 'have', 'in', 'seem', 'whence', 'ie', 'any', 'fill', 'again', 'hasnt', 'inc', 'thereby', 'thin', 'no', 'perhaps', 'latter', 'meanwhile', 'when', 'detail', 'same', 'wherein', 'beside', 'also', 'that', 'other', 'take', 'which', 'becomes', 'you', 'if', 'nobody', 'see', 'though', 'may', 'after', 'upon', 'most', 'hereupon', 'eight', 'but', 'serious', 'nothing', 'such', 'why', 'a', 'off', 'whereby', 'third', 'i', 'whole', 'noone', 'sometimes', 'well', 'amoungst', 'yours', 'their', 'rather', 'without', 'so', 'five', 'the', 'first', 'whereas', 'once']\n",
     "\n",
-    "# Write your code below\n"
+    "# Write your code below\n",
+    "#Importing libaries\n",
+    "import re\n",
+    "\n",
+    "#defining variables/lists\n",
+    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']\n",
+    "corpus = []\n",
+    "bag_of_words = []\n",
+    "word_list = []\n",
+    "term_freq = []\n",
+    "\n",
+    "#Opening documents and reading them\n",
+    "for i in docs:\n",
+    "    with open(i) as d: #With is needed to manage memory!!!!!\n",
+    "        corpus.append(d.read())\n",
+    "\n",
+    "#Lowercase and removing '.'\n",
+    "corpus = [i.replace('.', '').lower() for i in corpus]\n",
+    "\n",
+    "#Filling bag of words\n",
+    "for i in corpus:\n",
+    "    word_list = i.split()\n",
+    "    for word in word_list:\n",
+    "        if word not in bag_of_words and word not in stop_words:\n",
+    "            bag_of_words.append(word)\n",
+    "\n",
+    "#Counting the word word frequency            \n",
+    "for i in corpus:\n",
+    "    i = i.split()\n",
+    "    term_freq_doc = []\n",
+    "    for word in bag_of_words:\n",
+    "        if word in i:\n",
+    "            term_freq_doc.append('1')\n",
+    "        else:\n",
+    "            term_freq_doc.append('0')\n",
+    "    term_freq.append(term_freq_doc)\n",
+    "    \n",
+    "print(corpus)\n",
+    "print(bag_of_words)\n",
+    "print(term_freq)"
    ]
   },
   {
