--- a/Labs/module-1_labs/01_python/04_lab-functional-programming/your-code/Q3.ipynb
+++ b/Labs/module-1_labs/01_python/04_lab-functional-programming/your-code/Q3.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "items = [(1,2), (3,4), (5,6)]\n",
     "\n",
-    "def multiply(num_tuple):\n",
+    "def multiply(num_tuple):I \n",
     "    return num_tuple[0]*num_tuple[1]\n",
     "list(map(multiply, items))"
    ]
@@ -85,13 +85,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, 4, -1, -100, 0, 5, -99]\n",
     "\n",
-    "# Enter your code below"
+    "# Enter your code below\n",
+    "\n",
+    "positive_numbers = list(filter(lambda x: x > 0, numbers))\n",
+    "print(positive_numbers)"
    ]
   },
   {
@@ -113,15 +124,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-8e2599e8a844>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-8e2599e8a844>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    english = reduce((lambda x, langdetect.detect(words)=='en'), words, )\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import langdetect\n",
     "from functools import reduce\n",
     "words = ['good morning', '早上好', 'доброго', 'おはようございます', 'everyone', '大家', 'каждый', 'みんな']\n",
+    "# Enter your code below\n",
     "\n",
-    "# Enter your code below"
+    "#english = reduce((lambda x, y), words, ) ## Not very important if free time look at it!\n",
+    "\n",
+    "#print(english)"
    ]
   },
   {
@@ -199,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
