--- a/Labs/module-1_labs/01_python/04_lab-functional-programming/your-code/main.ipynb
+++ b/Labs/module-1_labs/01_python/04_lab-functional-programming/your-code/main.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-5-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
@@ -113,19 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We can also iterate through an iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
@@ -146,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +161,7 @@
     "            return i\n",
     "    \n",
     "iterator1 = iter([1,2,3,4])\n",
-    "iterator2 = iter([1,3])\n",
+    "#iterator2 = iter([1,3])\n",
     "\n",
     "print(divisible2(iterator1))"
    ]
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -287,12 +277,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "columns = ['sepal_length', 'sepal_width', 'petal_length','petal_width','iris_type']\n",
     "iris = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\", names=columns)"
    ]
@@ -306,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +379,7 @@
        "4           5.0          3.6           1.4          0.2  Iris-setosa"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,12 +398,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal_length    5.843333\n",
+      "sepal_width     3.054000\n",
+      "petal_length    3.758667\n",
+      "petal_width     1.198667\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "import numpy as np \n"
+    "import numpy as np \n",
+    "print(np.mean(iris))"
    ]
   },
   {
@@ -427,12 +428,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal_length    0.825301\n",
+      "sepal_width     0.432147\n",
+      "petal_length    1.758529\n",
+      "petal_width     0.760613\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "print(np.std(iris))"
    ]
   },
   {
@@ -444,12 +457,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepal_length  sepal_width  petal_length  petal_width\n",
+      "0             5.1          3.5           1.4          0.2\n",
+      "1             4.9          3.0           1.4          0.2\n",
+      "2             4.7          3.2           1.3          0.2\n",
+      "3             4.6          3.1           1.5          0.2\n",
+      "4             5.0          3.6           1.4          0.2\n",
+      "..            ...          ...           ...          ...\n",
+      "145           6.7          3.0           5.2          2.3\n",
+      "146           6.3          2.5           5.0          1.9\n",
+      "147           6.5          3.0           5.2          2.0\n",
+      "148           6.2          3.4           5.4          2.3\n",
+      "149           5.9          3.0           5.1          1.8\n",
+      "\n",
+      "[150 rows x 4 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "iris_numeric = iris._get_numeric_data()\n",
+    "print(iris_numeric)"
    ]
   },
   {
@@ -474,7 +509,10 @@
     "    # Sample Output: 0.393701\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    newx = pd.DataFrame()\n",
+    "    for i in x:\n",
+    "        newx[i] = x[i].astype(float)*0.393701\n",
+    "    return newx"
    ]
   },
   {
@@ -486,12 +524,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepal_length  sepal_width  petal_length  petal_width\n",
+      "0        2.007875     1.377954      0.551181     0.078740\n",
+      "1        1.929135     1.181103      0.551181     0.078740\n",
+      "2        1.850395     1.259843      0.511811     0.078740\n",
+      "3        1.811025     1.220473      0.590552     0.078740\n",
+      "4        1.968505     1.417324      0.551181     0.078740\n",
+      "..            ...          ...           ...          ...\n",
+      "145      2.637797     1.181103      2.047245     0.905512\n",
+      "146      2.480316     0.984253      1.968505     0.748032\n",
+      "147      2.559057     1.181103      2.047245     0.787402\n",
+      "148      2.440946     1.338583      2.125985     0.905512\n",
+      "149      2.322836     1.181103      2.007875     0.708662\n",
+      "\n",
+      "[150 rows x 4 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "iris_inch = cm_to_in(iris_numeric)\n",
+    "print(iris_inch)"
    ]
   },
   {
@@ -503,12 +563,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepal_length  sepal_width  petal_length  petal_width\n",
+      "0             7.1          5.5           3.4          2.2\n",
+      "1             6.9          5.0           3.4          2.2\n",
+      "2             6.7          5.2           3.3          2.2\n",
+      "3             6.6          5.1           3.5          2.2\n",
+      "4             7.0          5.6           3.4          2.2\n",
+      "..            ...          ...           ...          ...\n",
+      "145           8.7          5.0           7.2          4.3\n",
+      "146           8.3          4.5           7.0          3.9\n",
+      "147           8.5          5.0           7.2          4.0\n",
+      "148           8.2          5.4           7.4          4.3\n",
+      "149           7.9          5.0           7.1          3.8\n",
+      "\n",
+      "[150 rows x 4 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Define constant below:\n",
-    "\n",
+    "error = 2\n",
     "\n",
     "def add_constant(x):\n",
     "    # This function adds a global constant to our input.\n",
@@ -516,7 +597,13 @@
     "    # Output: numeric value\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    newx = pd.DataFrame()\n",
+    "    for i in x:\n",
+    "        newx[i] = x[i].astype(float)+error\n",
+    "    return newx\n",
+    "\n",
+    "iris_constant = add_constant(iris_numeric)\n",
+    "print(iris_constant)"
    ]
   },
   {
